# Mario

./: .gitignore  Johan TODO  Johan TODO~  ReadMe.md  ReadMe.txt  contributors.txt
Pics/: Mario_APC_fullsetup_1_gazebo  Mario_Grippper_with_cam
stowing/devel/: .catkin  .rosinstall  setup.sh
stowing/devel/include/gripper_driver/: force.h  motor_command.h  motor_state.h
stowing/devel/include/or_ompl/: config.h
stowing/devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h
stowing/devel/lib/pkgconfig/: abb_irb2400_blue_room_moveit_config.pc  boost_numpy.pc  gripper_driver.pc  industrial_deprecated.pc  openrave_catkin.pc  or_ompl.pc  stowing_driver.pc  ur10_moveit_config.pc  ur3_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_gazebo.pc  ur_kin_py.pc  ur_kinematics.pc  ur_msgs.pc
stowing/src/chong_hui/moveit_emp/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.57211b5  CMakeLists.txt.user.71a1311  CMakeLists.txt~  package.xml  package.xml~
stowing/src/chong_hui/nextage_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
stowing/src/chong_hui/nextage_teleoperate/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
stowing/src/chong_hui/radoe_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
stowing/src/chong_hui/radoe_rviz_panel_plugin/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  package.xml  package.xml~  plugin_description.xml  plugin_description.xml~
stowing/src/chong_hui/radoe_rviz_panel_plugin/export/: rapid_code.mod
stowing/src/chong_hui/radoe_rviz_panel_plugin/include/radoe_rviz_panel_plugin/: #radoe_plugin.hpp#  radoe_plugin.hpp  radoe_plugin_panel.hpp
stowing/src/chong_hui/radoe_rviz_panel_plugin/launch/: moveit_planning_execution.launch  moveit_planning_execution.launch~  moveit_radoe.rviz  moveit_rviz.launch
stowing/src/chong_hui/radoe_rviz_panel_plugin/src/: radoe_panel.cpp~  radoe_plugin.cpp  radoe_plugin_panel.cpp  radoe_plugin_panel.cpp~
stowing/src/chong_hui/radoe_rviz_panel_plugin/ui/: radoe_plugin_panel.ui  radoe_plugin_panel.ui.autosave  radoe_plugin_panel_old.ui
stowing/src/stowing_driver/: CMakeLists.txt  package.xml
stowing/src/stowing_driver/launch/: apc_shelf.launch  mario_actual.launch  mario_gazebo.launch  ur5.launch
stowing/src/stowing_driver/meshes/: Billy Shelf Combined 1.STL  billy_combined.dae  shelf_9_bin.STL  shelf_9_bin.dae
stowing/src/stowing_driver/scripts/: Untitled Document  Untitled Document~  apc_env.xml  apc_env2.xml  apc_global_params.py  calibration.py  jxGenerateGrasp.py  jxGenerateGrasp.py~  jxGraspingMain.py  jxGraspingMain.py~  jxItemLibrary.py  jxMathManipulation.py  mario_main.py  mario_state_machine.py  mario_transformations.py  mario_utility.py  new_script.py  new_script.py~  or_motion_planning.py  or_motion_planning.py~  pod_lowres.dae  poseInterpolator.py  realsense200.dae  test.py  test_action_client.py  test_openrave_model.py  test_state_machine.py~  test_ur5_lib.py  to_delete.py  tote.STL  ur5_lib.py  ur5_socket_connection.py
(+258 files in other folders)
